@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.17 (Release 149)"
+#define KPPPVERSION "1.5.18 (Release 140)"
 #endif
